// Copyright 2022 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package weetbix.internal.pagination;

option go_package = "infra/appengine/weetbix/internal/pagination/proto;paginationpb";

// A message for storing all the information attached to a page token.
message PageToken {
  // Position marks the cursor's start (exclusive). Its interpretation is
  // implementation-specific. For instance, for a Spanner cursor, this is a
  // string slice representation of the Spanner key corresponding to the entry
  // prior to the one at which to start reading, or empty if the cursor is to
  // start at the beginning.
  repeated string position = 1;
}
